force-app/force-app/force-app/main/default/objects/Sales_Plan_Product__c/Sales_Plan_Product__c.object-meta.xml
<CustomObject>
    <label>Sales Plan Product</label>
    <nameField>
        <displayFormat>SPP-{000000}</displayFormat>
        <label>Sales Plan Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Plan Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>