force-app/force-app/force-app/main/default/objects/Sales_Plan_Product__c/fields/Executive__c.field-meta.xml
<CustomField>
    <fullName>Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Plan_Products</relationshipName>
    <type>Lookup</type>
</CustomField>