force-app/force-app/force-app/main/default/objects/Sales_Plan_Product__c/fields/Forecast_Qty__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Qty__c</fullName>
    <label>Forecast Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>