force-app/force-app/force-app/main/default/objects/Sales_Plan_Product__c/fields/Lug__c.field-meta.xml
<CustomField>
    <fullName>Lug__c</fullName>
    <formula>TEXT(Product__r.LUG__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lug</label>
    <type>Text</type>
</CustomField>