force-app/force-app/force-app/main/default/objects/Sales_Plan_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sales Plan Products</relationshipLabel>
    <relationshipName>Sales_Plan_Products</relationshipName>
    <type>Lookup</type>
</CustomField>