force-app/force-app/force-app/main/default/objects/Sales_Plan_Product__c/fields/RW_PR__c.field-meta.xml
<CustomField>
    <fullName>RW_PR__c</fullName>
    <formula>TEXT( Product__r.RW_PR__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RW/PR</label>
    <type>Text</type>
</CustomField>