force-app/force-app/force-app/main/default/objects/Sales_Plan_Product__c/fields/Sales_Plan__c.field-meta.xml
<CustomField>
    <fullName>Sales_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Plan</label>
    <referenceTo>Sales_Plan__c</referenceTo>
    <relationshipLabel>Sales Plan Products</relationshipLabel>
    <relationshipName>Sales_Plan_Products</relationshipName>
    <type>Lookup</type>
</CustomField>