force-app/force-app/force-app/main/default/objects/Sales_Plan_Product__c/fields/Total_Qty_Planned__c.field-meta.xml
<CustomField>
    <fullName>Total_Qty_Planned__c</fullName>
    <formula>Sure_shot_Qty__c +  Forecast_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Qty Planned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>