force-app/force-app/force-app/main/default/objects/Sales_Plan_Product__c/fields/Tyre_TTF_TT_TL_Others__c.field-meta.xml
<CustomField>
    <fullName>Tyre_TTF_TT_TL_Others__c</fullName>
    <formula>TEXT( Product__r.Tyre_TTF_TL_TT__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tyre/TTF/TT/TL/Others</label>
    <type>Text</type>
</CustomField>