force-app/force-app/force-app/main/default/objects/Sales_Plan_Product__c/fields/Tyre_TWA_THA_Others__c.field-meta.xml
<CustomField>
    <fullName>Tyre_TWA_THA_Others__c</fullName>
    <formula>TEXT(Product__r.Tyre_TWA_THA__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tyre/TWA/THA/Others</label>
    <type>Text</type>
</CustomField>