force-app/force-app/force-app/main/default/objects/Sales_Plan_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Executive__c</columns>
    <columns>Brand__c</columns>
    <columns>Sales_Plan__c</columns>
    <columns>Total_Qty_Planned__c</columns>
    <columns>Total_Qty_Sold__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>